--- a/README
+++ b/README
@@ -4,6 +4,6 @@ Usage:
 
 python.py
 
-Author: Andile Whitehead
+Author: Andile Whitehead <andile.mothegi.whitehead@cern.ch>
 
 Thank you to all the participants.
