Wrote something else

--- a/README
+++ b/README
@@ -6,4 +6,4 @@ python.py
 
 Author: Andile Whitehead <andile.mothegi.whitehead@cern.ch>
 
-Thank you to all the participants.
+Thank you to all the participants. Blah blah.
