--- a/README
+++ b/README
@@ -7,3 +7,5 @@ python.py
 Author: Andile Whitehead <andile.mothegi.whitehead@cern.ch>
 
 Thank you to all the participants. Blah blah.
+
+#i can access and edit another person's repository
